ags (2.0.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_audio_buffer_util_envelope_*() to compute correct current volume
	* fixed ags-envelope recall read missing ratio value
	* fixed AgsEnvelopeDialog initial values

ags (2.0.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong one more offset calculation problem in ags-capture-wave and ags-play-wave

ags (2.0.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-capture-wave and ags-play-wave recall to use correct offset

ags (2.0.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsWaveLoader
	* implemented AgsAudiorec file loading animation
	* fixed set property of AgsLv2Worker:returnable-thread

ags (2.0.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* enabled recursive property reset during ags_channel_set_link() and fixed apply on output

ags (2.0.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added missing AGS_SOUND_ABILITY_PLAYBACK of plugin bridge's AgsAudio
	* partial rewrite of ags_envelope_audio_signal_run_inter()
	* fixed to many calls to the dispatcher
	* disable recursive property reset during ags_channel_set_link()

ags (2.0.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsMidiDialog non existing property use correct one "input-sequencer"
	* fixed free of unitialized GList in ags_effect_bridge.c
	* fixed DSSI and LV2 machines to use correct recall context
	* fixed dead-lock in ags_lv2_urid_manager.c
	* implemented missing properties AgsPlayDssi:bank and AgsPlayDssi:program
	* added missing AGS_SOUND_ABILITY_PLAYBACK of instrument's AgsAudio

ags (2.0.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reverted previously introduced but in ags-capture-wave
	* fixed ags-play-wave wrong offset calculation
	* fixed output/input soundcard editor to reset audio channel to -1 if no soundcard