@@ -988,9 +988,11 @@ ags_route_lv2_audio_run_feed_midi(AgsRecall *recall,
 	      /* prepend note */
 	      //		route_lv2_audio_run->feed_midi = g_list_prepend(route_lv2_audio_run->feed_midi,
 	      //						 note);
-	      
-	      recall_lv2_run->route_lv2_audio_run = (GObject *) route_lv2_audio_run;
 
+	      g_object_set(recall_lv2_run,
+			   "route-lv2-audio-run", route_lv2_audio_run,
+			   NULL);
+	      
 	      /* key on */
 	      seq_event = recall_lv2_run->event_buffer[0];
 		
